[gd_scene load_steps=25 format=3 uid="uid://fyioncoq703x"]

[ext_resource type="Script" path="res://Gundam project/Code/Zaku.gd" id="1_el6m1"]
[ext_resource type="Texture2D" uid="uid://dsms1gdbgvk23" path="res://Gundam project/Sprites/spr_zk_idle1.png" id="2_bjefx"]
[ext_resource type="Texture2D" uid="uid://ortjqwtkn4ih" path="res://Gundam project/Sprites/spr_zk_l1.png" id="3_fnpu5"]
[ext_resource type="Texture2D" uid="uid://ct21ojsmtamod" path="res://Gundam project/Sprites/spr_zk_l2.png" id="4_c85dc"]
[ext_resource type="Texture2D" uid="uid://3tppa4bkeecw" path="res://Gundam project/Sprites/spr_zk_R1.png" id="5_fpvq7"]
[ext_resource type="Texture2D" uid="uid://dda1s22ly0qwv" path="res://Gundam project/Sprites/spr_zk_R2.png" id="6_kl57s"]
[ext_resource type="Script" path="res://Gundam project/Code/AnimatedSprite2Dz.gd" id="7_pkusl"]
[ext_resource type="Texture2D" uid="uid://blcjf1vt8jvce" path="res://Gundam project/Sprites/crossair_white.png" id="9_4wuqh"]
[ext_resource type="PackedScene" uid="uid://wl1vrt8x1i8q" path="res://Gundam project/Scenes/Bullet_zaku.tscn" id="9_agd7y"]
[ext_resource type="Script" path="res://Gundam project/Code/char_weapon.gd" id="9_ct2wx"]
[ext_resource type="Script" path="res://Gundam project/Code/FiniteStateMachine.gd" id="9_scjls"]
[ext_resource type="Script" path="res://Gundam project/Code/ZakuIdle.gd" id="11_lx5ck"]
[ext_resource type="Script" path="res://Gundam project/Code/zakuFollow.gd" id="12_yj4mq"]
[ext_resource type="Script" path="res://Gundam project/Code/zakuShoot.gd" id="13_5nuen"]
[ext_resource type="AudioStream" uid="uid://d0qe22e0otnx8" path="res://Gundam project/SFX/burst sound.wav" id="15_5i5ay"]
[ext_resource type="Texture2D" uid="uid://b4otdpcu0vpr5" path="res://Gundam project/Sprites/barHorizontal_white_mid.png" id="15_xw5v5"]
[ext_resource type="Script" path="res://Gundam project/Code/ZakuDeath.gd" id="16_s622u"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a46yb"]
radius = 32.0
height = 82.0

[sub_resource type="SpriteFrames" id="SpriteFrames_mksi1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bjefx")
}],
"loop": true,
"name": &"idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_fnpu5")
}, {
"duration": 50.0,
"texture": ExtResource("4_c85dc")
}],
"loop": true,
"name": &"walk_left",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_fpvq7")
}, {
"duration": 50.0,
"texture": ExtResource("6_kl57s")
}],
"loop": true,
"name": &"walk_right",
"speed": 12.0
}]

[sub_resource type="Animation" id="Animation_aewxx"]
resource_name = "zaku_gun_shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ivivv"]
_data = {
"zaku_gun_shoot": SubResource("Animation_aewxx")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_occvi"]
radius = 402.001

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1ue17"]
texture = ExtResource("15_xw5v5")
modulate_color = Color(0.282353, 0.282353, 0.282353, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_83wvq"]
texture = ExtResource("15_xw5v5")
modulate_color = Color(0.694118, 0.0352941, 0, 1)

[node name="Zakunode" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(-2, 0)
script = ExtResource("1_el6m1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 8)
shape = SubResource("CapsuleShape2D_a46yb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, 5)
sprite_frames = SubResource("SpriteFrames_mksi1")
animation = &"idle"
script = ExtResource("7_pkusl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ivivv")
}

[node name="PlayerDetection" type="Area2D" parent="."]
light_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(4, 3)
shape = SubResource("CircleShape2D_occvi")

[node name="WeaponManager" type="Node2D" parent="."]

[node name="bullet_spawner" type="Node2D" parent="WeaponManager"]
script = ExtResource("9_ct2wx")

[node name="EndOfGun" type="Marker2D" parent="WeaponManager/bullet_spawner"]
position = Vector2(23, 0)

[node name="Gun_direction" type="Marker2D" parent="WeaponManager/bullet_spawner"]
position = Vector2(65, 0)

[node name="Sprite2D" type="Sprite2D" parent="WeaponManager/bullet_spawner"]
modulate = Color(0.745098, 0, 0, 1)
position = Vector2(341, 2)
texture = ExtResource("9_4wuqh")

[node name="FiniteStateMachine" type="Node2D" parent="."]
script = ExtResource("9_scjls")

[node name="Idle" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("11_lx5ck")

[node name="Follow" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("12_yj4mq")

[node name="Shoot" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("13_5nuen")
Bullet = ExtResource("9_agd7y")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="FiniteStateMachine/Shoot"]
stream = ExtResource("15_5i5ay")
volume_db = -30.0

[node name="Death" type="Node2D" parent="FiniteStateMachine"]
script = ExtResource("16_s622u")

[node name="debug" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -34.0
offset_top = -57.0
offset_right = 52.0
offset_bottom = -30.0
scale = Vector2(0.951774, 0.37249)
theme_override_styles/background = SubResource("StyleBoxTexture_1ue17")
theme_override_styles/fill = SubResource("StyleBoxTexture_83wvq")
value = 100.0
show_percentage = false

[connection signal="body_entered" from="PlayerDetection" to="WeaponManager/bullet_spawner" method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="FiniteStateMachine/Idle" method="_on_player_detection_body_entered"]
